--- a/index.css
+++ b/index.css
@@ -22,8 +22,8 @@ body {
 }
 
 h1 {
-  /* margin-top: 0px;
-  margin-bottom: 10px; */
+  margin-top: 0px;
+  margin-bottom: 30px;
   font-family: sans-serif;
   font-size: 7vw;
   background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
@@ -38,6 +38,9 @@ h1 {
 button {
   width: 17vw; 
   height: 5vw;
+  font-size: 2.8vw;
+  min-width: 40px;
+min-height: 20px;
     flex-direction: row;
     border: none;
     outline: none;
@@ -99,11 +102,11 @@ button:after {
 
 
 .response {
+  font-size: 2.7vw;
   display: inline;
   background-color: #FFE77AFF;
   padding:20px;
   border-radius:30px;
-  max-width:220px;
   margin-left: 20px;
   position:relative;
   align-items:center;
