--- a/index.css
+++ b/index.css
@@ -1,14 +1,14 @@
-html, body {
-    margin: 0;
-    padding: 0;
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  background-color: #2C5F2DFF;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  align-content:center;
+  background-color: #2c5f2dff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .wrapper {
@@ -17,8 +17,6 @@ body {
   align-items: center;
   flex-direction: column;
   text-align: center;
-  flex-flow:row wrap;
-
 }
 
 h1 {
@@ -26,117 +24,122 @@ h1 {
   margin-bottom: 30px;
   font-family: sans-serif;
   font-size: 7vw;
-  background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+  background: linear-gradient(
+    to right,
+    #ef5350,
+    #f48fb1,
+    #7e57c2,
+    #2196f3,
+    #26c6da,
+    #43a047,
+    #eeff41,
+    #f9a825,
+    #ff5722
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-#wrapper {
-  flex-flow:row wrap;
-
-}
 button {
-  width: 17vw; 
-  height: 5vw;
   font-size: 2.8vw;
   min-width: 40px;
-min-height: 20px;
-    flex-direction: row;
-    border: none;
-    outline: none;
-    color: #fff;
-    background: #111;
-    cursor: pointer;
-    position: relative;
-    z-index: 0;
-    border-radius: 10px;
+  min-height: 20px;
+  flex-direction: row;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
 }
 
 button:before {
-    content: '';
-    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
-    position: absolute;
-    top: -2px;
-    left:-2px;
-    background-size: 400%;
-    z-index: -1;
-    filter: blur(5px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    animation: glowing 20s linear infinite;
-    opacity: 0;
-    transition: opacity .3s ease-in-out;
-    border-radius: 15px;
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 15px;
 }
 
 button:active {
-    color: #000
+  color: #000;
 }
 
 button:active:after {
-    background: transparent;
+  background: transparent;
 }
 
 button:hover:before {
-    opacity: 1;
+  opacity: 1;
 }
 
 button:after {
-    z-index: -1;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #111;
-    left: 0;
-    top: 0;
-    border-radius: 10px;
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #111;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
 }
-
-@keyframes glowing {
-    0% { background-position: 0 0; }
-    50% { background-position: 400% 0; }
-    100% { background-position: 0 0; }
-}
-
-
 
 .response {
   font-size: 2.7vw;
   display: inline;
-  background-color: #FFE77AFF;
-  padding:20px;
-  border-radius:30px;
+  background-color: #ffe77aff;
+  padding: 20px;
+  border-radius: 30px;
   margin-left: 20px;
-  position:relative;
-  align-items:center;
-  justify-content:center;
-  text-align:center;
+  position: relative;
+  text-align: center;
 }
+
 .response:before,
 .response:after {
-  content:"";
-  background-color: #FFE77AFF;
-  border-radius:50%;
+  content: "";
+  background-color: #ffe77aff;
+  border-radius: 50%;
   display: inline;
   position: absolute;
-  z-index:-1;
+  z-index: -1;
 }
+
 .response:before {
-  width:44px;
-  height:44px;
-  top:-12px;
-  left:28px;
-  box-shadow:-50px 30px 0 -12px #FFE77AFF;
+  width: 44px;
+  height: 44px;
+  top: -12px;
+  left: 28px;
+  box-shadow: -50px 30px 0 -12px #ffe77aff;
 }
+
 .response:after {
-  bottom:-10px;
-  right:26px;
-  width:30px;
-  height:30px;
-  box-shadow:40px -34px 0 0 #FFE77AFF,
-             -28px -6px 0 -2px #FFE77AFF,
-             -24px 17px 0 -6px #FFE77AFF,
-             -5px 25px 0 -10px #FFE77AFF;
-  
+  bottom: -10px;
+  right: 26px;
+  width: 30px;
+  height: 30px;
+  box-shadow: 40px -34px 0;
 }
